Updating dark mode script to fix the White Flashing when navigating to different pages

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -122,7 +122,7 @@ input[type="submit"] {
   border: 1px solid var(--text-color);
   cursor: pointer;
   padding: 8px 16px;
-  transition: background-color 0.4s, color 0.4s, border-color 0.4s;
+  transition: background-color 0.0s, color 0.0s, border-color 0.0s;
   border-radius: 3px;
 }
 
